added some fun regex games

--- a/src/main/resources/ValidationMessages_en_GB.properties
+++ b/src/main/resources/ValidationMessages_en_GB.properties
@@ -2,3 +2,6 @@
 ## This file is intentionally left empty (see ValidationMessage_en.properties in hibernate validator's jar)
 ## IMPORTANT NOTE: This file MUST be located at the classpath's root in order to be picked up by hibernate validator
 javax.validation.constraints.NotNull.message=must be provided
+
+
+Email.com.logbookmanager.domain.support.EmailAddress.address.message=The email address does not match the prescribed pattern
